# patrolbot_ws

./: .gitignore  frames_2025-07-23_03.19.40.gv
Arduino/: NOTES  latest.ino  new.ino  new_ultra.ino  patrol.ino  ros2_control.ino  ros2_control_extra.ino
Backup/: motor_driver_node.cpp  odometry_node.cpp
src/robot_base/: CMakeLists.txt  package.xml
src/robot_base/launch/: motor_driver.launch.py
src/robot_base/src/: motor_driver_node.cpp  odometry_node.cpp
src/robot_bringup/: CMakeLists.txt  package.xml  setup.py
src/robot_bringup/config/: controller.yaml
src/robot_bringup/launch/: full_system.launch.py  full_system_no_rp.launch.py  full_with_ros2_control.launch.py  manual_mode.launch.py  ros2_control.launch.py  rplidar.launch.py
src/robot_bringup/robot_bringup/: bringup.launch.py  robot.rviz
src/robot_desc/: CMakeLists.txt  package.xml
src/robot_desc/meshes/: body_link2.stl
src/robot_desc/rviz/: robot_config.rviz
src/robot_desc/urdf/: diff_robot.urdf
src/robot_hardware/: CMakeLists.txt  diffbot_hardware_plugins.xml  package.xml
src/robot_hardware/config/: robot_controllers.yaml
src/robot_hardware/include/robot_hardware/: arduino_diff_drive_system.hpp
src/robot_hardware/launch/: bringup.launch.py
src/robot_hardware/src/: arduino_diff_drive_system.cpp
src/robot_slam/launch/: rplidar.launch.py
src/robot_teleop/: package.xml  setup.py
src/robot_teleop/launch/: teleop_launch.py
src/robot_teleop/robot_teleop/: teleop_key.py
