<?xml version="1.0"?>
<package format="3">
  <name>robot_desc</name>
  <version>0.0.1</version>
  <description>Robot description package with URDF and meshes</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
