<?xml version="1.0"?>
<package format="3">
  <name>robot_hardware</name>
  <version>0.1.0</version>
  <description>Arduino-based differential drive robot hardware interface using ros2_control</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>

  <!-- Export plugin description -->
  <export>
    <pluginlib plugin="${prefix}/diffbot_hardware_plugins.xml"/>
  </export>
</package>
